# sudoku

./: .gitignore  .gitmodules  README.md  pyproject.toml
C/: README.md  makefile
C/src/: main.c  sudoku.c  sudoku.h
C/tests/: mock_board.csv  sudoku.c  test_sudoku.c
boards/input/: 001_1.csv
c/: .gitignore  README.md  makefile
c/src/: logger.c  main.c  sudoku.c  sudoku.h
c/tests/: test_sudoku.c
c/tests/fixtures/: mock_board.csv  mock_board_input_2x2.csv  mock_board_is_invalid.csv  mock_board_is_valid.csv  mock_board_is_valid_2x2.csv  mock_board_is_valid_2x2_1.csv  mock_board_non_unique_solution.csv  mock_board_non_unique_solution_2x2.csv  mock_board_read_input.csv  mock_board_read_input_2x2.csv
inputs/: 002_4.csv
python/: README.md  makefile  pyproject.toml
python/inputs/: 003_5.csv  004_5.csv
python/sudoku/: backtracking.py  main.py
sudoku/: backtracking.py  io.py  main.py
