[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Sudoku solver"
authors = [ "Benjamin Labrecque" ]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.2.2"
black = "^23.1.0"
mypy = "^1.10.0"

[tool.mypy]
files = "sudoku"
strict = true
namespace_packages = true
explicit_package_bases = true
